update profiles module
